# MicroC

./: .gitignore  CMakeLists.txt  README.md
include/: gp.h  material.h  microc.h
scripts/: cg_perf.sh  cg_perf_filter.sh  extrac_cg_perf.sh  extrac_result.sh  perf_pc_n.sh  vars.sh
src/: assembly.c  bcs.c  general.c  homogenize.c  init.c  material.c  solve.c
test/: CMakeLists.txt  test_assembly_jac.c  test_assembly_jac_omp.c  test_assembly_res.c  test_assembly_res_omp.c  test_bc_apply_on_u.c  test_bc_apply_on_u_omp.c  test_calc_strain.c  test_calc_stress.c  test_cg.c  test_get_stress.c  test_init.c  test_newton_raphson.c  test_newton_raphson_omp.c  test_set_strain.c  test_solver_linear.c  test_solver_linear_omp.c
